Public access for metoder i testutils. Fjerner Spring Boot spesifikke annoteringer